environment/higher-lower-game.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
      - name: app1
        image: 637341921879.dkr.ecr.ap-northeast-2.amazonaws.com/eks-project/higher-lower-game
        ports:
        - containerPort: 8000
        command: ["gunicorn"]
        args: ["--bind", "0.0.0.0:8000", "--workers", "4", "main:app"]
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 200m
            memory: 256Mi

---
apiVersion: v1
kind: Service
metadata:
  name: app1
spec:
  selector:
    app: app1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
